# QtQueens

./: CMakeLists.txt  README.md  chessboard.cpp  chessboard.h  main.cpp  mainwindow.cpp  mainwindow.h  queen.cpp  queen.h  resources.qrc  utils.cpp  utils.h
